metadata/force-app/main/default/objects/CustomName_msRZz__c/CustomName_msRZz__c.object-meta.xml
<CustomObject>
    <description>Description_jpuSP</description>
    <label>CustomLabel_WbFPB</label>
    <nameField>
        <label>CustomLabel_WbFPB</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WbFPBs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>