metadata/force-app/main/default/objects/CustomName_msRZz__c/fields/CustomField_YdvAN__c.field-meta.xml
<CustomField>
    <fullName>CustomField_YdvAN__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldhMqym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>